# eigen-utils

./: CMakeLists.txt  Makefile  README
cmake/: lcmtypes.cmake  pods.cmake
lcmtypes/: .gitignore  eigen_utils_eigen_dense_t.lcm
matlab/: .gitignore  loadEigenMatrices.m  matlabLcmRpc.m  saveMatricesForEigen.m
src/: CMakeLists.txt  eigen_file_io.hpp  eigen_gl.cpp  eigen_gl.hpp  eigen_lcm.hpp  eigen_lcm.hxx  eigen_lcm_matlab_rpc.cpp  eigen_lcm_matlab_rpc.hpp  eigen_lcmgl.cpp  eigen_lcmgl.hpp  eigen_numerical.cpp  eigen_numerical.hpp  eigen_rand.cpp  eigen_rand.hpp  eigen_rigidbody.cpp  eigen_rigidbody.hpp  eigen_select_block.hpp  eigen_select_block.hxx  eigen_utils.cpp  eigen_utils.hpp  eigen_utils_common.cpp  eigen_utils_common.hpp
src/test-eigen/: CMakeLists.txt  test_fft.cpp  test_file_io.cpp  test_geom.cpp  test_lcm_marshalling.cpp  test_lcm_matlab_rpc.cpp  test_select_block.cpp  test_triangle_view.cpp
